--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple Chat App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js",
+    "start-server": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Alok-debug/Chat-App/issues"
   },
-  "homepage": "https://github.com/Alok-debug/Chat-App#readme"
+  "homepage": "https://github.com/Alok-debug/Chat-App#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
